--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,11 @@
 .frog {
     background-color: greenyellow;
 }
+
+.l1, .l2, .l3 {
+background-color: brown;
+}
+
+.l4, .l5 {
+    background-color: aqua
+}
