added moving logs, added moving cars but have issue with cars not moving

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,11 @@ background-color: brown;
 .l4, .l5 {
     background-color: aqua
 }
+
+.c1 {
+    background-color: black;
+}
+
+.c2, .c3 {
+    background-color: lightgray;
+}
